--- a/config-service/Jenkinsfile
+++ b/config-service/Jenkinsfile
@@ -1,7 +1,7 @@
 node('dind-node') {
   withMaven(maven:'M3') {
     stage('Checkout') {
-      git url: 'https://github.com/savvyk/sample-spring-microservices-new.git', credentialsId: 'piomin-github', branch: 'master'
+      git url: 'https://github.com/savvyk/sample-spring-microservices-new.git', credentialsId: 'savvyk', branch: 'master'
     }
     stage('Build') {
       dir('config-service') {
