--- a/config-service/Jenkinsfile
+++ b/config-service/Jenkinsfile
@@ -1,5 +1,5 @@
 node('dind-node') {
-  withMaven(maven) {
+  withMaven(maven:'M3') {
     stage('Checkout') {
       git url: 'https://github.com/savvyk/sample-spring-microservices-new.git', credentialsId: 'savvyk', branch: 'master'
     }
