--- a/config-service/Jenkinsfile
+++ b/config-service/Jenkinsfile
@@ -1,4 +1,4 @@
-node('dind-node') {
+node('master') {
   withMaven(maven:'M3') {
     stage('Checkout') {
       git url: 'https://github.com/savvyk/sample-spring-microservices-new.git', credentialsId: 'savvyk', branch: 'master'
